CSS Change: Fix homepage to not have horizontal scrollwheel caused by padding conflict.

--- a/frontend/src/pages/Homepage/Homepage.module.css
+++ b/frontend/src/pages/Homepage/Homepage.module.css
@@ -3,12 +3,12 @@
   position: relative;
   width: 100vw; /* Ensures it spans the full viewport width */
   height: 100vh; /* Optional: Ensures it spans the full viewport height */
+  box-sizing: border-box; /* Prevents horizontal scrolling due to padding*/
   background-color: white; /* Background color of homepage */
   background-size: cover; /* Ensures the background covers the container without overflowing */
-  overflow-x: hidden; /* Prevents any horizontal scrolling if overflow still occurs */
+  overflow-x: hidden; /* Prevents any horizontal scrolling if overflow occurs */
   margin: 0; /* Reset default margins */
   padding: 0; /* Reset default padding */
-  padding-top: 40px;
 }
 
 .searchBar {
@@ -16,7 +16,7 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto; /* Center horizontally if necessary */
-  padding-top: 20px;
+  padding-top: 60px;
   padding-bottom: 20px;
 }
 
